pkg/ingress/kube/gateway/istio/testdata/multi-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: higress.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  addresses:
  - type: Hostname
    value: istio-ingressgateway
  - type: Hostname
    value: istio-ingressgateway.not-default.svc.domain.suffix
  - type: Hostname
    value: example.com
  listeners:
  - name: http
    hostname: "*.domain.example"
    port: 80
    protocol: HTTP
  - name: tcp
    port: 34000
    protocol: TCP
    allowedRoutes:
      namespaces:
        from: All
